// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// THIS FILE IS AUTOMATICALLY GENERATED BY MIXGEN.

syntax = "proto3";



//
// myapa template is ..
package istio.mixer.adapter.sample.myapa;


import "gogoproto/gogo.proto";
import "mixer/adapter/model/v1beta1/extensions.proto";
import "google/protobuf/any.proto";

import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_ATTRIBUTE_GENERATOR;
option (istio.mixer.adapter.model.v1beta1.template_name) = "myapa";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;
option (gogoproto.stable_marshaler_all) = true;

// HandleMyApaService is implemented by backends that wants to handle request-time 'myapa' instances.
service HandleMyApaService {
    // HandleMyApa is called by Mixer at request-time to deliver 'myapa' instances to the backend.
    rpc HandleMyApa(HandleMyApaRequest) returns (OutputMsg);
}

// Request message for HandleMyApa method.
message HandleMyApaRequest {

    // 'myapa' instance.
    InstanceMsg instance = 1;

    // Adapter specific handler configuration.
    //
    // Note: Backends can also implement [InfrastructureBackend][https://istio.io/docs/reference/config/mixer/istio.mixer.adapter.model.v1beta1.html#InfrastructureBackend]
    // service and therefore opt to receive handler configuration during session creation through [InfrastructureBackend.CreateSession][TODO: Link to this fragment]
    // call. In that case, adapter_config will have type_url as 'google.protobuf.Any.type_url' and would contain string
    // value of session_id (returned from InfrastructureBackend.CreateSession).
    google.protobuf.Any adapter_config = 2;

    // Id to dedupe identical requests from Mixer.
    string dedup_id = 3;
}



// Contains output payload for 'myapa' template.
message OutputMsg {
    
    
    int64 int64Primitive = 1;
    
    
    bool boolPrimitive = 2;
    
    
    double doublePrimitive = 3;
    
    
    string stringPrimitive = 4;
    
    
    istio.policy.v1beta1.TimeStamp timeStamp = 6;
    
    
    istio.policy.v1beta1.Duration duration = 7;
    
    
    istio.policy.v1beta1.EmailAddress email = 10;
    
    
    istio.policy.v1beta1.IPAddress out_ip = 11;
    
    
    map<string, string> out_str_map = 12;
    
}

// Contains instance payload for 'myapa' template. This is passed to infrastructure backends during request-time
// through HandleMyApaService.HandleMyApa.
message InstanceMsg {

    // Name of the instance as specified in configuration.
    string name = 72295727;
    
    
    int64 int64Primitive = 1;
    
    
    bool boolPrimitive = 2;
    
    
    double doublePrimitive = 3;
    
    
    string stringPrimitive = 4;
    
    
    map<string, int64> dimensionsFixedInt64ValueDType = 5;
    
    
    istio.policy.v1beta1.TimeStamp timeStamp = 6;
    
    
    istio.policy.v1beta1.Duration duration = 7;
    
    
    map<string, Resource3Msg> res3_map = 8;
    
    
    istio.policy.v1beta1.IPAddress optionalIP = 9;
    
    
    istio.policy.v1beta1.EmailAddress email = 10;
    
}


message Resource1Msg {
    
    
    string str = 1;
    
    
    Resource1Msg self_ref_res1 = 3;
    
    
    Resource2Msg resRef2 = 2;
    
}


message Resource2Msg {
    
    
    string str = 1;
    
    
    Resource3Msg res3 = 2;
    
    
    map<string, Resource3Msg> res3_map = 3;
    
}

// resource3 comment
message Resource3Msg {
    
    
    int64 int64Primitive = 1;
    
    
    bool boolPrimitive = 2;
    
    
    double doublePrimitive = 3;
    
    
    string stringPrimitive = 4;
    
    
    map<string, int64> dimensionsFixedInt64ValueDType = 5;
    
    
    istio.policy.v1beta1.TimeStamp timeStamp = 6;
    
    
    istio.policy.v1beta1.Duration duration = 7;
    
}

// Contains inferred type information about specific instance of 'myapa' template. This is passed to
// infrastructure backends during configuration-time through [InfrastructureBackend.CreateSession][TODO: Link to this fragment].
message Type {
    
    
    map<string, Resource3Type> res3_map = 8;
    
}


message Resource1Type {
    
    
    Resource1Type self_ref_res1 = 3;
    
    
    Resource2Type resRef2 = 2;
    
}


message Resource2Type {
    
    
    Resource3Type res3 = 2;
    
    
    map<string, Resource3Type> res3_map = 3;
    
}

// resource3 comment
message Resource3Type {
    
}


// Represents instance configuration schema for 'myapa' template.
message InstanceParam {
    
    
    string int64Primitive = 1;
    
    
    string boolPrimitive = 2;
    
    
    string doublePrimitive = 3;
    
    
    string stringPrimitive = 4;
    
    
    map<string, string> dimensionsFixedInt64ValueDType = 5;
    
    
    string timeStamp = 6;
    
    
    string duration = 7;
    
    
    map<string, Resource3InstanceParam> res3_map = 8;
    
    
    string optionalIP = 9;
    
    
    string email = 10;
    // Attribute names to expression mapping. These expressions can use the fields from the output object
    // returned by the attribute producing adapters using $out.<fieldName> notation. For example:
    // source.ip : $out.source_pod_ip
    // In the above example, source.ip attribute will be added to the existing attribute list and its value will be set to
    // the value of source_pod_ip field of the output returned by the adapter.
    map<string, string> attribute_bindings = 72295728;
    
}


message Resource1InstanceParam {
    
    
    string str = 1;
    
    
    Resource1InstanceParam self_ref_res1 = 3;
    
    
    Resource2InstanceParam resRef2 = 2;
    
}


message Resource2InstanceParam {
    
    
    string str = 1;
    
    
    Resource3InstanceParam res3 = 2;
    
    
    map<string, Resource3InstanceParam> res3_map = 3;
    
}

// resource3 comment
message Resource3InstanceParam {
    
    
    string int64Primitive = 1;
    
    
    string boolPrimitive = 2;
    
    
    string doublePrimitive = 3;
    
    
    string stringPrimitive = 4;
    
    
    map<string, string> dimensionsFixedInt64ValueDType = 5;
    
    
    string timeStamp = 6;
    
    
    string duration = 7;
    
}

