syntax = "proto3";

package SampleCheck;

import "mixer/adapter/model/v1beta1/extensions.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_CHECK;

message Template {
    string stringPrimitive = 4;
}
